--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <a href="b.html">b</a>
+    <a href="c.html">call</a>
+    <a href="A Coffee.html">Coffee</a>
 </body>
 </html>
