--- a/c.html
+++ b/c.html
@@ -53,5 +53,6 @@
 </p>
     <a id="end">end</a>
     <a href="tel:15109393603">call yyj</a>
+    <a href="mailto:380120971@qq.com">380120971@qq.com</a>
 </body>
 </html>
