--- a/A Coffee.html
+++ b/A Coffee.html
@@ -18,6 +18,11 @@
         padding: 10px;
         width: 100%;
         height: 25%;
+    } 
+    .heard h1{
+        color: white;
+        font-size: 50px;
+        text-align: center;
     }
     .center{
         width: 100%;
@@ -52,7 +57,7 @@
 
     <div class="heard">
 
-        <h1 style="text-align: center;">来杯咖啡吗？</h1>
+        <h1>来杯咖啡吗？</h1>
 
     </div>
     <div class="center">
