--- a/Coffee.html
+++ b/Coffee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Do you want to get a Coffee?</title>
+    <title>Coffee</title>
 </head>
 <body>
 
@@ -68,7 +68,6 @@
     </div>
 
     <div class="center">
-
         <div class="left">
             <p><a href="#coffeeA">拿铁</a></p>
             <br>
