--- a/Coffee.html
+++ b/Coffee.html
@@ -6,105 +6,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>coffee</title>
+    <link rel="stylesheet" href="Resource/css/coffee.css">
 </head>
-
 <body>
+    <div class="header">
+        <div class="top">
+            <img src="Resource/coffee.jpg" alt="">
+            <p>来杯咖啡吗？</p>
+        </div>
+    </div>
+    <div class="content">
+        <div class="left">
+            <div class="coffee_list">
+                <ul class="list">
+                    <li><a href="#c1">拿铁</a></li>
+                    <li><a href="#c2">卡布奇诺</a></li>
+                    <li><a href="#c3">白咖啡</a></li>
+                    <li><a href="#c4">黑咖啡</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="right">
+            <div class="right_top">
+                <img src="Resource/coffee.jpg">
+            </div>
+            <br />
+            <a id="price"></a>
+            <div class="price">
+                <p>价格表</p>
+                <table>
+                    <tr>
+                        <th>咖啡</th>
+                        <th>价格</th>
+                    </tr>
+                    <tr>
+                        <td>拿铁</td>
+                        <td class="jg">24</td>
+                    </tr>
+                    <tr>
+                        <td>卡布奇诺</td>
+                        <td class="jg">56</td>
+                    </tr>
+                    <tr>
+                        <td>白咖啡</td>
+                        <td class="jg">66</td>
+                    </tr>
+                    <tr>
+                        <td>黑咖啡</td>
+                        <td class="jg">94</td>
+                    </tr>
+                </table>
+            </div>
+            <br />
+            <a id="c1"></a>
+            <div class="c1">
+                <div class="cimg"><img src=https://ss1.bdstatic.com/6OF1bjeh1BF3odCf/it/u=2627122944,4252681548&fm=74&app=80&f=JPEG&size=f121,90?sec=1880279984&t=1ad8cf2802b126d16fcdf3489f7b616b" alt=""></div>
+                <p class="tit">拿铁</p>
+                <p class="ant">拿铁是意大利文“Latte”的
+                    音译，拿铁咖啡(CoffeeLatte)是花式咖啡的一种，是咖啡与牛奶交融的极至之作。意式拿铁咖啡为纯牛奶加咖啡，美式拿铁则将部分牛奶替换成奶泡，本地的拿铁多为此种。
+                    那句著名的“我不在咖啡馆，就在去咖啡馆的路上”是一位音乐家在维也纳说出来的。维也纳的空气里，永远都飘荡着音乐和拿铁(Latte)咖啡的味道。</p>
+            </div>
+            <br/>
+            <a id="c2"></a>
+            <div class="c2">
+                <div class="cimg"><img src="http://ali.xinshipu.cn/20130712/original/1373618464904.jpg" alt=""></div>
+                <p class="tit">卡布奇诺</p>
+                <p class="ant">
+                    卡布奇诺是一种加入以同量的意大利特浓咖啡和蒸汽泡沫牛奶相混合的意大利咖啡。此时咖啡的颜色，就像卡布奇诺教会的修士在深褐色的外衣上覆上一条头巾一样，咖啡因此得名。传统的卡布奇诺咖啡是三分之一浓缩咖啡，三分之一蒸汽牛奶和三分之一泡沫牛奶，并在上面撒上小颗粒的肉桂粉末。
+                    <br>
+                    不同于马来西亚当地的黑咖啡的制法，白咖啡的咖啡豆在经过棕榈油烘培的过程当中不添加糖和小麦，同时使用低温烘培法，烘培时间较一般咖啡长,每豆咖啡因含量较低。但由于每单位白咖啡比一般咖啡使用更多的咖啡豆及高度榨取，每单位的咖啡因含量反而更高。
+                    （白咖啡:74mg/100ml; 速溶咖啡：57mg/100ml; 混合咖啡：68mg/100ml; 咖啡拿铁:32mg/100ml）口味上比起黑咖啡有较少的苦味和酸味，但有更多的炭香味。
+                </p>
+            </div>
+            <br />
+            <a id="c3"></a>
+            <div class="c3">
+                <div class="cimg"><img src="img/coffee_4.jpg" alt=""></div>
+                <p class="tit">白咖啡</p>
+                <p class="ant">
+                        白咖啡 (White Coffee) 的名称并非因为咖啡的颜色而命名，而是在咖啡豆的烘培过程中没有添加任何成分，因此白咖啡名称中的“白”也取义纯净、纯粹。
+                </p>
+            </div>
+            <br />
+            <a id="c4"></a>
+            <div class="c4">
+                <div class="cimg"><img src="https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=01b2db500024ab18e016e6310dc181f0/b3119313b07eca8036ec0791982397dda04483de.jpg" alt=""></div>
+                <p class="tit">黑咖啡</p>
+                <p class="ant">黑咖啡是不加任何修饰的咖啡，黑咖啡带来的是品味咖啡的原始感受。黑咖啡集合了咖啡香甘醇酸苦五味的特点。</p>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+            <p>版权所有&copy;04</p>
+    </div>
+</body>
 
-    <body style="margin:0;" border="0" cellspacing="0" cellpadding="0">
-
-
-
-
-        <table style="width:100%;" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-                <td colspan="2" style="text-align:center;background-color:#0000CC;color:#99CCFF;">
-                    <h2><img src="Resource/Coffee.jpg"
-                            style="width:32px;height:32px;line-height:64px;vertical-align:middle;" /><span
-                            style="vertical-align:middle;line-height:64px;height:32px;">来杯咖啡吗</span></h2>
-                </td>
-            </tr>
-            <tr>
-                <td style="width:200px;vertical-align:top;color:#0000CC;background-color:#99CCFF;">
-                    <ul><li><a href="#c1">拿铁</a></li>
-                        <li><a href="#c2">卡布奇诺</a></li>
-                        <li><a href="#c3">白咖啡</a></li>
-                        <li><a href="#c4">黑咖啡</a> </li> </ul>
-                </td>
-
-                <td style="padding:10px;">
-                    <h2 style="text-align:center;"><img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT239HRraILmDN3r25Oh8kDBeLcOiHCK_vFRuJ49_uPH9cCzpCE"
-                            alt="" style="width:80%;">
-                    </h2>
-
-
-
-                    <table border="1" style="border:1px solid black; border-collapse:collapse;
-                    width:80%;
-                    margin:0 auto;">
-                        <tr>
-                            <th>咖啡</th>
-                            <th>价格</th>
-                        </tr>
-
-                        <tr>
-                            <td>拿铁</td>
-                            <td>24</td>
-                        </tr>
-
-                        <tr>
-                            <td>卡布奇诺</td>
-                            <td>56</td>
-                        </tr>
-
-                        <tr>
-                            <td>白咖啡</td>
-                            <td>66</td>
-                        </tr>
-
-                        <tr>
-                            <td>黑咖啡</td>
-                            <td>94</td>
-                        </tr>
-                        
-                    </table>
-
-
-
-                    <h2 id="c1">拿铁</h2>
-                    <img src="https://ss1.bdstatic.com/6OF1bjeh1BF3odCf/it/u=2627122944,4252681548&fm=74&app=80&f=JPEG&size=f121,90?sec=1880279984&t=1ad8cf2802b126d16fcdf3489f7b616b"
-                        alt="">
-                    <p>
-                        拿铁咖啡是意大利浓缩咖啡(Espresso)与牛奶的经典混合，意大利人也很喜欢把拿铁作为早餐的饮料。意大利人早晨的厨房里，照得到阳光的炉子上通常会同时煮着咖啡和牛奶。
-                    </p>
-                    <h2 id="c2">卡布奇诺</h2>
-                    <img src="http://ali.xinshipu.cn/20130712/original/1373618464904.jpg" alt="">
-                    <p>
-                        卡布奇诺（意大利语：Cappuccino）是原产意大利的一种带泡沫的咖啡。
-                    </p>
-                    <h2 id="c3">白咖啡</h2>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/IpohWhiteCoffee..jpg/220px-IpohWhiteCoffee..jpg"
-                        alt="">
-                    <p>白咖啡 (White Coffee) 的名称并非因为咖啡的颜色而命名，而是在咖啡豆的烘培过程中没有添加任何成分，因此白咖啡名称中的“白”也取义纯净、纯粹。
-                        <br>
-                        不同于马来西亚当地的黑咖啡的制法，白咖啡的咖啡豆在经过棕榈油烘培的过程当中不添加糖和小麦，同时使用低温烘培法，烘培时间较一般咖啡长,每豆咖啡因含量较低。但由于每单位白咖啡比一般咖啡使用更多的咖啡豆及高度榨取，每单位的咖啡因含量反而更高。
-                        （白咖啡:74mg/100ml; 速溶咖啡：57mg/100ml; 混合咖啡：68mg/100ml; 咖啡拿铁:32mg/100ml）口味上比起黑咖啡有较少的苦味和酸味，但有更多的炭香味。
-                    </p>
-                    <h2 id="c4">黑咖啡</h2>
-                    <img src="https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=01b2db500024ab18e016e6310dc181f0/b3119313b07eca8036ec0791982397dda04483de.jpg"
-                        alt="">
-                    <p>黑咖啡是不加任何修饰的咖啡，黑咖啡带来的是品味咖啡的原始感受。黑咖啡集合了咖啡香甘醇酸苦五味的特点。</p>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2" style="text-align:center;background-color:#0000CC;line-height:64px;color:#99CCFF;">
-                    &copy; 版权所有</td>
-            </tr>
-        </table>
-
-
-
-
-
-    </body>
 </html>
