--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <a href="b.html">b</a>
     <a href="c.html">call</a>
-    <a href="A Coffee.html">Coffee</a>
+    <a href="Coffee.html">Coffee</a>
 </body>
 </html>
