--- a/coffee-div.html
+++ b/coffee-div.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class="top">
-            <img src="Resource/coffee.jpg" alt="">
+            <img src="Resource/Icon/coffee-icon.png" alt="">
             <p>来杯咖啡吗？</p>
         </div>
     </div>
@@ -73,7 +73,6 @@
                 <p class="tit">卡布奇诺</p>
                 <p class="ant">
                     卡布奇诺是一种加入以同量的意大利特浓咖啡和蒸汽泡沫牛奶相混合的意大利咖啡。此时咖啡的颜色，就像卡布奇诺教会的修士在深褐色的外衣上覆上一条头巾一样，咖啡因此得名。传统的卡布奇诺咖啡是三分之一浓缩咖啡，三分之一蒸汽牛奶和三分之一泡沫牛奶，并在上面撒上小颗粒的肉桂粉末。
-                    <br>
                     不同于马来西亚当地的黑咖啡的制法，白咖啡的咖啡豆在经过棕榈油烘培的过程当中不添加糖和小麦，同时使用低温烘培法，烘培时间较一般咖啡长,每豆咖啡因含量较低。但由于每单位白咖啡比一般咖啡使用更多的咖啡豆及高度榨取，每单位的咖啡因含量反而更高。
                     （白咖啡:74mg/100ml; 速溶咖啡：57mg/100ml; 混合咖啡：68mg/100ml; 咖啡拿铁:32mg/100ml）口味上比起黑咖啡有较少的苦味和酸味，但有更多的炭香味。
                 </p>
@@ -81,7 +80,7 @@
             <br />
             <a id="c3"></a>
             <div class="c3">
-                <div class="cimg"><img src="img/coffee_4.jpg" alt=""></div>
+                <div class="cimg"><img src="https://gss2.bdstatic.com/9fo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=757adf9d48a7d933aba5ec21cc22ba76/242dd42a2834349b79f28b0cc3ea15ce37d3be47.jpg" alt=""></div>
                 <p class="tit">白咖啡</p>
                 <p class="ant">
                         白咖啡 (White Coffee) 的名称并非因为咖啡的颜色而命名，而是在咖啡豆的烘培过程中没有添加任何成分，因此白咖啡名称中的“白”也取义纯净、纯粹。
