--- a/personShow.html
+++ b/personShow.html
@@ -35,11 +35,11 @@
             <h1>喜欢的书</h1>
             <hr>
             <div class="mybook">
-                <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcS9FLH9FMrbNGNLvp97PXvjznCJuj8OMgjDYbm4c64T-DgLUh0o">
+                <img src="Resource/img/personShow1-book1.jpeg">
                 <p>诗云</p>
             </div>
             <div class="mybook">
-                <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcRXxUCaDTahIMpqXiKPun4ZDWpsLIA6d0yQaEDhEw7zMbIcoJcW">
+                <img src="Resource/img/personShow1-book2.jpg">
                 <p>窄门</p>
             </div>
             <div class="mybook">
@@ -68,7 +68,7 @@
                     <p>龙背上的骑兵3</p>
                 </div>
                 <div class="mygame">
-                    <img src="http://img1.gamersky.com/image2016/04/20160421_ljy_126_6/gamersky_08origin_15_201642115585E1.jpg">
+                    <img src="Resource/img/personShow1-game4.jpg">
                     <p>Stellaris</p>
                 </div>
             </div>
