--- a/barrage.html
+++ b/barrage.html
@@ -14,10 +14,10 @@
 
     </div>
     <div class="bottom" id="bottom">
-        <input type="请输入弹幕" class="text" id="input">
+        <input type="text" class="in" id="input">
         <div class="buttons">
-            <li><button id="spaw">发射弹幕</button></li>
-            <li><button id="clear">清空弹幕</button></li>
+            <li><button id="spaw" onclick="spaw()">发射弹幕</button></li>
+            <li><button id="clear" onclick="clear()">清空弹幕</button></li>
         </div>
     </div>
 </body>
