--- a/danmu.html
+++ b/danmu.html
@@ -11,13 +11,12 @@
 </head>
 <body>
     <div class="content" id="content">
-
     </div>
     <div class="bottom" id="bottom">
         <input type="text" class="in" id="input">
         <div class="buttons">
             <li><button id="spaw" onclick="spaw()">发射弹幕</button></li>
-            <li><button id="clear" onclick="clear()">清空弹幕</button></li>
+            <li><button id="id_clear" onclick="del()" >清空弹幕</button></li>
         </div>
     </div>
 </body>
