--- a/enterpriseStation.html
+++ b/enterpriseStation.html
@@ -32,10 +32,57 @@
         <div class="content-top">
             <div class="content-top-title">
                 <h1>服务范围</h1>
+                <ul>
+                    <li>
+                        <div class="content-top-title-icon">
+                            <a href=""><img src="Resource/Icon/游戏 (1).png" alt=""></a>
+                            <p>服务范围</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-top-title-icon">
+                            <a href=""><img src="Resource/Icon/游戏 (2).png" alt=""></a>
+                            <p>服务范围</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-top-title-icon">
+                            <a href=""><img src="Resource/Icon/游戏.png" alt=""></a>
+                            <p>服务范围</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-top-title-icon">
+                            <a href=""><img src="Resource/Icon/游戏图标.png" alt=""></a>
+                            <p>服务范围</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="content-main">
-
+            <h1 id="content-main-top">游戏介绍</h1>
+            <div class="content-main-left">
+                <div class="contnet-main-box">
+                    <div class="content-main-img  content-main-box">
+                        <img src="Resource/img/enterpriseStation/dark soul.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="content-main-right">
+                <div class="contnet-main-box">
+                    <div class="contente-main-text content-main-box">
+                        <div class="contente-main-text-top">
+                            <h1> Dark Soul 3 </h1>
+                            <p>在久远之前，世界本是一片混沌，不分天地，只有大树、不朽的古龙和灰色的岩石，一切均笼罩在一片浓雾之中。然而某一天，某棵大树的底下出现了最初的火炉，这样世界上就有了光与暗，然后受到火的吸引，有生物从黑暗之中诞生。</p>
+                        </div>
+                        <div class="contente-main-text-buttom">
+                            <hr>
+                            <p>评价：所以说为什么去不传火呢？</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
