--- a/enterpriseStation.html
+++ b/enterpriseStation.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Enterprise Station</title>
     <link rel="stylesheet" href="Resource/css/enterpriseStation.css">
+    <script src="Resource/js/enterpriseStation.js"></script>
 </head>
 
 <body>
@@ -27,11 +28,22 @@
     </div>
     <div class="content">
         <div class="content-rockTop">
-            <img class="content-rockTop-imgs" src="Resource/img/enterpriseStation/enterpriseStation2.jpg" alt="">
+            <ul id="content-rockTop-imgslist">
+                <li class="content-rockTop-imgs"><img src="Resource/img/enterpriseStation/enterpriseStation2.jpg" alt=""></li>
+                <li><img src="Resource/img/enterpriseStation/enterpriseStation2.jpg" alt=""></li>
+                <li><img src="Resource/img/enterpriseStation/enterpriseStation3.jpg" alt=""></li>
+            </ul>
+            <span id="left">&lt;</span>
+            <span id="right">&gt;</span>
+            <ol>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ol>
         </div>
         <div class="content-top">
             <div class="content-top-title">
-                <h1>服务范围</h1>
+                <h1>游戏</h1>
                 <ul>
                     <li>
                         <div class="content-top-title-icon">
