--- a/enterpriseStation.html
+++ b/enterpriseStation.html
@@ -43,23 +43,26 @@
         </div> -->
         <div class="slider">
             <div class="slider-container">
-              <div class="slider-wrapper">
-                <div class="slide"> <img src="Resource/img/enterpriseStation/enterpriseStation1.jpg" alt="jQuery Slider with CSS Transitions"> </div>
-                <div class="slide"> <img src="Resource/img/enterpriseStation/enterpriseStation2.jpg" alt="jQuery Slider with CSS Transitions"> </div>
-                <div class="slide"> <img src="Resource/img/enterpriseStation/enterpriseStation3.jpg" alt="jQuery Slider with CSS Transitions"> </div>
-              </div>
+                <div class="slider-wrapper">
+                    <div class="slide"> <img src="Resource/img/enterpriseStation/enterpriseStation1.jpg"
+                            alt="jQuery Slider with CSS Transitions"> </div>
+                    <div class="slide"> <img src="Resource/img/enterpriseStation/enterpriseStation2.jpg"
+                            alt="jQuery Slider with CSS Transitions"> </div>
+                    <div class="slide"> <img src="Resource/img/enterpriseStation/enterpriseStation3.jpg"
+                            alt="jQuery Slider with CSS Transitions"> </div>
+                </div>
             </div>
-          </div>
-          <script src="Resource/js/jquery-1.8.3.min.js"></script> 
-<script src="Resource/js/slider.js"></script> 
-<script type="text/javascript">
-	(function() {
-		Slider.init({
-			target: $('.slider'),
-			time: 2000
-		});
-	})();
-</script>
+        </div>
+        <script src="Resource/js/jquery-1.8.3.min.js"></script>
+        <script src="Resource/js/slider.js"></script>
+        <script type="text/javascript">
+            (function () {
+                Slider.init({
+                    target: $('.slider'),
+                    time: 2000
+                });
+            })();
+        </script>
         <div class="content-top">
             <div class="content-top-title">
                 <h1>游戏</h1>
@@ -107,12 +110,13 @@
                             <p>超自然的第三人称动作冒险
 
                                 在纽约的一个秘密机构被一种超自然的威胁入侵之后，你就成了一个努力重新获得控制权的新导演。
-                                
+
                                 从开发者补救娱乐，这个超自然的第三人行动冒险将挑战你掌握超自然能力的组合，可修改的负荷，和反应环境，同时战斗通过一个深刻的和不可预测的世界。</p>
                         </div>
                         <div class="contente-main-text-buttom">
                             <hr>
-                            <p>评价：总而言之《Control》的整体游玩体验像是观看了一部“新怪谈风格”的动作电影，玩家在这部电影中试图理解其中的缘由，但都未曾成功。而《Control》在这种充满迷惑的基础之上用爽快的战斗、充满诡异风格的建筑、引人深思的NPC对话和怪诞的支线任务将这种氛围烘托的淋漓尽致，或许很多玩家在第一次通关后都未能理解剧情在讲什么，但游戏中太多的闪光点却深深的刻在了他们的脑海之中，这就是“新怪谈”的魅力，也是《Control》最吸引玩家的地方。同样ALIENWARE也希望玩家在这款充满奇异幻想的游戏中获得流畅的游戏体验，并且感受这款游戏带来的视觉冲击，ALIENWARE m15会帮助玩家从视觉和操作上控制游戏中的一切。</p>
+                            <p>评价：总而言之《Control》的整体游玩体验像是观看了一部“新怪谈风格”的动作电影，玩家在这部电影中试图理解其中的缘由，但都未曾成功。而《Control》在这种充满迷惑的基础之上用爽快的战斗、充满诡异风格的建筑、引人深思的NPC对话和怪诞的支线任务将这种氛围烘托的淋漓尽致，或许很多玩家在第一次通关后都未能理解剧情在讲什么，但游戏中太多的闪光点却深深的刻在了他们的脑海之中，这就是“新怪谈”的魅力，也是《Control》最吸引玩家的地方。同样ALIENWARE也希望玩家在这款充满奇异幻想的游戏中获得流畅的游戏体验，并且感受这款游戏带来的视觉冲击，ALIENWARE
+                                m15会帮助玩家从视觉和操作上控制游戏中的一切。</p>
                         </div>
                     </div>
                 </div>
@@ -129,7 +133,8 @@
                     <div class="contente-main-text content-main-box">
                         <div class="contente-main-text-top">
                             <h1> Dark Soul 3 </h1>
-                            <p>在久远之前，世界本是一片混沌，不分天地，只有大树、不朽的古龙和灰色的岩石，一切均笼罩在一片浓雾之中。然而某一天，某棵大树的底下出现了最初的火炉，这样世界上就有了光与暗，然后受到火的吸引，有生物从黑暗之中诞生。</p>
+                            <p>在久远之前，世界本是一片混沌，不分天地，只有大树、不朽的古龙和灰色的岩石，一切均笼罩在一片浓雾之中。然而某一天，某棵大树的底下出现了最初的火炉，这样世界上就有了光与暗，然后受到火的吸引，有生物从黑暗之中诞生。
+                            </p>
                         </div>
                         <div class="contente-main-text-buttom">
                             <hr>
@@ -149,23 +154,63 @@
                         <div class="contente-main-text-top">
                             <h1> 汪达与巨像</h1>
                             <p>《汪达与巨像》是一款由《ICO》制作组Team ICO开发的一款超大魄力动作冒险游戏。于2005年10月27日发售PS2版本。
-                                游戏主要以玩家与各种巨像战斗为主线。游戏中的巨像种类丰富，不仅能在地上行走，在水里遨游，还可飞上天空。游戏主要战斗方式依靠按住R1键抓住石像的身体，然后爬到他们的身上攻击其弱点。《汪达与巨像》的画风与《ICO》相似，不过游戏节奏却是完全不同。故事不再发生在封闭的城堡内，而是在广袤的荒野大地。主角汪达是一个为了拯救失去灵魂的少女而骑马冒险的青年，为了让爱人醒来，青年决定不顾一切与巨像战斗。</p>
+                                游戏主要以玩家与各种巨像战斗为主线。游戏中的巨像种类丰富，不仅能在地上行走，在水里遨游，还可飞上天空。游戏主要战斗方式依靠按住R1键抓住石像的身体，然后爬到他们的身上攻击其弱点。《汪达与巨像》的画风与《ICO》相似，不过游戏节奏却是完全不同。故事不再发生在封闭的城堡内，而是在广袤的荒野大地。主角汪达是一个为了拯救失去灵魂的少女而骑马冒险的青年，为了让爱人醒来，青年决定不顾一切与巨像战斗。
+                            </p>
                         </div>
                         <div class="contente-main-text-buttom">
                             <hr>
                             <p>评价：整个游戏的最大特点，同时也是唯一的玩法，就是气势磅礴的巨像战。制作人上田文人通过一系列精巧绝妙的游戏机制，构建出一个个摄人心魄的巨像战场。每个挑战巨像的过程都没有赘笔，浑然天成，丝丝入扣。
                                 <br>耐人寻味的是，当玩家杀死巨像之后，无法获得任何正面反馈。没有胜利的特效和字幕，没有振奋人心的激昂音乐，只有黑漆漆的粒子和悲伤的曲调。如果坚持到故事的最后，便能更加理解这种做法的原因——战胜巨像获得的不该是成就感，而是负罪感。
-                               <br> 曾经有人说在一张空旷得没有任何敌人和NPC的地图上骑马毫无意义。这可能是对作品的误读。巨像战前的跑图非但不是多余的，反而是整个巨像战重要的构成部分。骑马奔驰寻找巨像的过程，是为了让玩家了解一个在真实呼吸的游戏世界，同时去体会主人公迫切救人的心情。
+                                <br>
+                                曾经有人说在一张空旷得没有任何敌人和NPC的地图上骑马毫无意义。这可能是对作品的误读。巨像战前的跑图非但不是多余的，反而是整个巨像战重要的构成部分。骑马奔驰寻找巨像的过程，是为了让玩家了解一个在真实呼吸的游戏世界，同时去体会主人公迫切救人的心情。
 
-　　<br> 上田文人的意图或许很简单——去感觉这个世界和这个人。
+                                　　<br> 上田文人的意图或许很简单——去感觉这个世界和这个人。
                             </p>
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
+
+
+
+
+        <div class="content-buttom-news">
+            <h1>新闻动态</h1>
+            <div class="content-buttom-news-box">
+                    <ul>
+                            <li>
+                                <div class="content-top-title-icon">
+                                    <a href=""><img src="Resource/Icon/游戏 (1).png" alt=""></a>
+                                    <p>服务范围</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-top-title-icon">
+                                    <a href=""><img src="Resource/Icon/游戏 (2).png" alt=""></a>
+                                    <p>服务范围</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-top-title-icon">
+                                    <a href=""><img src="Resource/Icon/游戏.png" alt=""></a>
+                                    <p>服务范围</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-top-title-icon">
+                                    <a href=""><img src="Resource/Icon/游戏图标.png" alt=""></a>
+                                    <p>服务范围</p>
+                                </div>
+                            </li>
+                        </ul>
+            </div>
+        </div>
+
+
+
+
+
     </div>
     <div class="footer">
 
