--- a/enterpriseStation.html
+++ b/enterpriseStation.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Enterprise Station</title>
     <link rel="stylesheet" href="Resource/css/enterpriseStation.css">
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
     <script src="Resource/js/enterpriseStation.js"></script>
 </head>
 
@@ -171,49 +173,39 @@
                 </div>
             </div>
         </div>
-
-
-
-
         <div class="content-buttom-news">
-            <h1>新闻动态</h1>
-            <div class="content-buttom-news-box">
-                    <ul>
-                            <li>
-                                <div class="content-top-title-icon">
-                                    <a href=""><img src="Resource/Icon/游戏 (1).png" alt=""></a>
-                                    <p>服务范围</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="content-top-title-icon">
-                                    <a href=""><img src="Resource/Icon/游戏 (2).png" alt=""></a>
-                                    <p>服务范围</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="content-top-title-icon">
-                                    <a href=""><img src="Resource/Icon/游戏.png" alt=""></a>
-                                    <p>服务范围</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="content-top-title-icon">
-                                    <a href=""><img src="Resource/Icon/游戏图标.png" alt=""></a>
-                                    <p>服务范围</p>
-                                </div>
-                            </li>
-                        </ul>
-            </div>
+            <ul class="newslist">
+                <h2>新闻动态</h2>
+                <div class="clean"></div>
+            </ul>
         </div>
-
-
-
-
-
+    </div>
     </div>
     <div class="footer">
-
+        <div class="fnav">
+            <div class="footer_top">
+                <div class="ft">
+                    <img src="Resource/Icon/zb.png">
+                    <p>闽江学院</p>
+                </div>
+                <div class="ft">
+                    <img src="Resource/Icon/游戏图标.png">
+                    <p>123456789@qq.com</p>
+                </div>
+                <div class="ft">
+                    <img src="Resource/Icon/游戏区.png">
+                    <p>123-456-789</p>
+                </div>
+                <div class="ft">
+                    <img class="er" src="Resource/img/二维码.jpg">
+                    <p>扫一扫</p>
+                </div>
+            </div>
+            <div class="footer_bottom">
+                <hr>
+                <p>版权所有&copy;04</p>
+            </div>
+        </div>
     </div>
 </body>
 
