--- a/enterpriseStation.html
+++ b/enterpriseStation.html
@@ -21,9 +21,9 @@
         <div class="header-right">
             <div class="header-right-list">
                 <ul>
-                    <li><a href="#about">关于我们</a> </li>
+                    <li><a href="about.html">关于我们</a> </li>
                     <li><a href="#news">新闻</a> </li>
-                    <li><a href="#main">首页</a> </li>
+                    <li><a href="enterpriseStation.html">首页</a> </li>
                 </ul>
             </div>
         </div>
